1st draft on Feb 24

--- a/app/views/pictures/index.html.erb
+++ b/app/views/pictures/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Pictures</h1>
+<h1>Pictures before 30 days</h1>
 <%= link_to("New Picture", "/pictures/new") %>
 
 <% @pictures.each do |picture| %>
