--- a/app/views/pictures/index.html.erb
+++ b/app/views/pictures/index.html.erb
@@ -1,7 +1,9 @@
 <h1>Pictures in <%= @year %></h1>
-<%= link_to("New Picture", "/pictures/new") %>
+
+<p>
+  <%= link_to 'New Picture', new_picture_path %>
+</p>
 
 <% @pictures.each do |picture| %>
-  <p><%= picture.title %>, <%= picture.artist %></p>
-  <%= link_to(image_tag(picture.url), "/pictures/#{picture.id}") %>
-  <% end %>
+  <%= render 'picture', picture: picture %>
+<% end %>
