--- a/app/views/pictures/show.html.erb
+++ b/app/views/pictures/show.html.erb
@@ -1,4 +1,3 @@
-<%= link_to("Back to Pictures", "/pictures") %> | <%= link_to("Edit", "/pictures/#{@picture.id}/edit") %> | <%= link_to("Delete", "/pictures/#{@picture.id}", method: :delete, data: {confirm: "Are you sure you want to delete this picture?"})  %>
+<%= link_to("Back to Pictures", pictures_path(@picture)) %> | <%= link_to("Edit", edit_picture_path(@picture)) %> | <%= link_to("Delete", picture_path(@picture), method: :delete, data: {confirm: "Are you sure you want to delete this picture?"})  %>
 
-<p><%= @picture.title %>, <%= @picture.artist %></p>
-<%= image_tag(@picture.url) %>
+<%= render 'picture', picture: @picture %>
