--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,26 @@
 </head>
 <body>
 
+  <p>
+    <% if current_user %>
+      Hello <%= current_user.email %>!
+
+      <%= link_to 'Logout', sessions_path, method: :delete %>
+    <% else %>
+      <%= link_to 'New User', new_users_path %>
+      |
+      <%= link_to 'Login', new_sessions_path %>
+    <% end %>
+  </p>
+
+  <% if flash[:notice] %>
+    <p class="notice"><%= flash[:notice] %></p>
+  <% end %>
+
+  <% if flash[:alert] %>
+    <p class="alert"><%= flash[:alert] %></p>
+  <% end %>
+
 <%= yield %>
 
 </body>
